--- a/forms/templates/forms_app/home.html
+++ b/forms/templates/forms_app/home.html
@@ -31,6 +31,10 @@
         {% for u in user %}
             <tr>
                 <td>{{u.id}}</td><td>{{u.name}}</td><td>{{u.age}}</td><td>{{u.birth}}</td>
+                <td>
+                    <a href="edit/{{u.id}}/" title="Edit User">Edit User</a>|
+                    <a href="delete/{{u.id}}/" title="Delete User">Delete User</a>
+                </td>
             </tr>
         {% endfor %}
     </table>
